--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Face API</title>
   <script defer src="face-api.min.js"></script>
   <script defer src="script.js"></script>
+  <script data-ad-client="ca-pub-1980229560361804" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <style>
     body {
       margin: 0;
